test_suite/alan-2022-examples/failing/000680_mutation.alan
source _ begin boolean;; relax end
